assert-struct/tests/snapshots/nested__deeply_nested_regex_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_regex_pattern.rs:39:27
   |
39 |                 email: =~ r".*@company\.com$",  // Line 39 - should report this line
   |                           ^^^^^^^^^^^^^^^^^^^ got "john@example.com"
